--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -78,6 +78,7 @@
     <ClCompile Include="Engine\Systems\ErrorLoggingSystem.cpp" />
     <ClCompile Include="Engine\Systems\Rendering\RenderPipeline\EditorGridRenderSystem.cpp" />
     <ClCompile Include="Engine\Systems\PrepareEventsSystem.cpp" />
+    <ClCompile Include="Engine\Systems\ParticlesSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -190,6 +191,7 @@
     <ClInclude Include="Engine\Systems\PrepareEventsSystem.h" />
     <ClInclude Include="Engine\Tools\MathHelper.h" />
     <ClInclude Include="Engine\Core\ECS\Events\SySceneLoadEvent.h" />
+    <ClInclude Include="Engine\Systems\ParticlesSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Assets\SkyBox\skybox_1.png" />
