--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -39,6 +39,13 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Core\Helpers\TypesExt.cs" />
+        <Compile Include="Core\Resources\EResourceType.cs" />
+        <Compile Include="Core\Resources\ResHelper.cs" />
+        <Compile Include="Core\Resources\SyResManager.cs" />
+        <Compile Include="Core\Resources\ResMaterial.cs" />
+        <Compile Include="Core\Resources\ResBase.cs" />
+        <Compile Include="Core\Resources\ResRef.cs" />
         <Compile Include="Core\Comps\LightComp.cs" />
         <Compile Include="Core\Comps\MeshComp.cs" />
         <Compile Include="Core\Comps\RigidComp.cs" />
@@ -50,11 +57,15 @@
         <Compile Include="Core\Datas\SyVector4.cs" />
         <Compile Include="Core\Helpers\HashHelper.cs" />
         <Compile Include="Core\Helpers\MathExt.cs" />
+        <Compile Include="Core\ProxyComps\ProxyMeshComp.cs" />
         <Compile Include="Core\ProxyComps\ProxyTransformComp.cs" />
+        <Compile Include="Core\Resources\ResTexture.cs" />
+        <Compile Include="Core\Resources\SyProxyResManager.cs" />
         <Compile Include="Core\SyEcs.cs" />
         <Compile Include="Core\SyEcsSync.cs" />
         <Compile Include="Core\SyEcsSystemBase.cs" />
         <Compile Include="Core\SyProxyEcs.cs" />
+        <Compile Include="Editor\Drawers\EditorDrawerArray.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerBase.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerBool.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerColor.cs" />
@@ -65,6 +76,7 @@
         <Compile Include="Editor\Drawers\EditorDrawerFloat.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerInt.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerCompTransform.cs" />
+        <Compile Include="Editor\Drawers\EditorDrawerResRef.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerVector3.cs" />
         <Compile Include="Editor\SyProxyEditor.cs" />
         <Compile Include="Game\SyGameConfigBase.cs" />
