--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -741,7 +741,7 @@
     <ClInclude Include="Engine\Components\LightComponent.h" />
     <ClInclude Include="Engine\Core\Rendering\RenderTarget.h" />
     <ClInclude Include="Engine\Tools\ComplexString.h" />
-    <ClInclude Include="Engine\Tools\Data\ColliderGeometry.h" />
+    <ClInclude Include="Engine\Tools\Data\Geometry.h" />
     <ClInclude Include="Engine\Tools\Data\FlagBitmask.h" />
     <ClInclude Include="Engine\Tools\Data\RingBuffer.h" />
     <ClInclude Include="Engine\Tools\ErrorLogger.h" />
